--- a/style.css
+++ b/style.css
@@ -1,36 +1,32 @@
-*{
-    padding:0;
-    margin:0;
-};
+body {
+    font: normal 15px Arial;
+}
 
 #Lista{
-    display:flex;
+    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-
+    
 }
-
-.ITENS_LOJA{
-   display:flex;
-   border-width:10px;
-   flex-direction:column;
-   justify-content: center;
-   float:left;
-   width:20%;
-   display:block;
-   border:10%;
-   border:solid pink 3px;
-    font-size:21px;
-    border-radius:15px;
-    text-align:center;
-   align-items:center;
-   
-
+.ITENS_LOJA {
+    display: flex;
+    border: 2px solid blueviolet;
+    border-radius: 10px;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 18%;
+    margin: 3px;
+    margin-top:55px;
 }
-#Titulo{
-    display:flex;
-    justify-content: center;
-    font-size:48px;
-    font-family:Comis Sans MS;
-   
+.imagens {
+    display: flex;
+    width: 10%;
+}
+.Titulo{
+    text-align: center;
+  
+
+    
 }
